--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-        <img src="img/Logotipo para doceria moderno ilustrado rosa e bege.png" alt="">
+        <img src="Logotipo para doceria moderno ilustrado rosa e bege.png" alt="">
         </div>
        
         <div class="lembrancas">
