--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     </header>
     <section class="linha">
         <div class="bloco">
-            <img class="brigadeiro" src="img/brigadeiro.jpeg" alt="">
+            <img class="brigadeiro" src="brigadeiro.jpeg" alt="">
             <p>BRIGADEIROS R$3,50</p>
             <button class="bt2"  onclick="compre()" >COMPRAR</button>
 
         </div>
         <div class="bloco">
-                <img  class="brigadeiro" src="img/beijinho.jpg" alt="">
+                <img  class="brigadeiro" src="beijinho.jpg" alt="">
                  <p>BEIJINHOS R$3,50</p>
                 <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
         <div class="bloco">
-                <img  class="brigadeiro" src="img/brownie.jpg" alt="">
+                <img  class="brigadeiro" src="brownie.jpg" alt="">
                  <p>BROWNIE: R$3,00</p>
                 <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -52,19 +52,19 @@
 
    <section class="linha">
     <div class="bloco">
-        <img class="brownierecheado" src="img/brownierecheado.jpg" alt="">
+        <img class="brownierecheado" src="brownierecheado.jpg" alt="">
         <p>BROWNIE RECHEADOS:R$4,00</p>
         <button class="bt4"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="copinhos" src="img/copinhos.jpeg" alt="">
+        <img  class="copinhos" src="copinhos.jpeg" alt="">
         <p> COPINHOS:R$5,00</p>
         <button class="bt5"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="donults" src="img/donults.jpeg" alt="">
+        <img  class="donults" src="donults.jpeg" alt="">
         <p>DONULTS : R$5,50</p>
         <button class="bt6"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -72,7 +72,7 @@
 
     <section class="linha">
      <div class="bloco">
-    <img  class="macarrom" src="img/macarrom.webp" alt="">
+    <img  class="macarrom" src="macarrom.webp" alt="">
     <p>MACARROM: R$3,00</p>
     <button class="bt7"  onclick="compre()" >COMPRAR</button>
     </div>
