--- a/index2.html
+++ b/index2.html
@@ -34,18 +34,18 @@
     </header>
     <section class="linha">
         <div class="bloco">
-            <img class="brigadeiro" src="img/amigos.jpeg" alt="">
+            <img class="brigadeiro" src="amigos.jpeg" alt="">
             <p>LEMBRNACINHAS CLIENTES,AMIGOS-KIT 20UNIDADES R$75,00</p>
             <button class="bt2"  onclick="compre()" >COMPRAR</button>
 
         </div>
         <div class="bloco">
-            <img  class="brigadeiro" src="img/tempero.webp" alt="">
+            <img  class="brigadeiro" src="tempero.webp" alt="">
             <p>LEMBRANCINHA TEMPERO-KIT 50UNIDADES R$192,50</p>
             <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
         <div class="bloco">
-            <img  class="brigadeiro" src="img/batizado.jpeg" alt="">
+            <img  class="brigadeiro" src="batizado.jpeg" alt="">
             <p>LEMBRANCINHA BATIZADO MANDALA R$15,99</p>
             <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -53,19 +53,19 @@
 
    <section class="linha">
     <div class="bloco">
-        <img class="brownierecheado" src="img/caixa.jpg" alt="">
+        <img class="brownierecheado" src="caixa.jpg" alt="">
         <p>LEMBRANCINHA COM 4 BRIGADEIROS R$15,00</p>
         <button class="bt4"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="copinhos" src="img/suculenta.jpeg" alt="">
+        <img  class="copinhos" src="suculenta.jpeg" alt="">
         <p> LEMRANCINHA EM JUTA COM SUCULENTAS+TAG-KIT 30UNIDADES R$200,00</p>
         <button class="bt5"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="donults" src="img/ferreiro.jpg" alt="">
+        <img  class="donults" src="ferreiro.jpg" alt="">
         <p>LEMBRANCINHA FORMATURA-KIT 20UNIDADES R$80,00</p>
         <button class="bt6"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -73,19 +73,19 @@
 
     <section class="linha">
         <div class="bloco">
-            <img class="brownierecheado" src="img/junina.jpeg" alt="">
+            <img class="brownierecheado" src="junina.jpeg" alt="">
             <p>LEMBRANCINHA FESTA JUNINA CENTRO DE MESA R$10,00</p>
             <button class="bt7"  onclick="compre()" >COMPRAR</button>
             </div>
     
             <div class="bloco">
-            <img  class="copinhos" src="img/sabonete.jpeg" alt="">
+            <img  class="copinhos" src="sabonete.jpeg" alt="">
             <p>LEMBRANCINHA DE CASAMENTO-KIT 10UNIDADES R$100,00</p>
             <button class="bt8"  onclick="compre()" >COMPRAR</button>
             </div>
     
             <div class="bloco">
-            <img  class="donults" src="img/pascoa.jpeg" alt="">
+            <img  class="donults" src="pascoa.jpeg" alt="">
             <p>LEMBRANCINHA PASCOA-KIT 15UNIDADES R$55,20</p>
             <button class="bt9"  onclick="compre()" >COMPRAR</button>
             </div>
