--- a/index3.html
+++ b/index3.html
@@ -35,18 +35,18 @@
 
     <section class="linha">
         <div class="bloco">
-            <img class="brigadeiro" src="img/aniversario.jpeg" alt="">
+            <img class="brigadeiro" src="aniversario.jpeg" alt="">
             <p>CONVITE ANIVERSÁRIO JUNINO R$1,00 UND</p>
             <button class="bt2"  onclick="compre()" >COMPRAR</button>
 
         </div>
         <div class="bloco">
-                <img  class="brigadeiro" src="img/casamento.jpeg" alt="">
+                <img  class="brigadeiro" src="casamento.jpeg" alt="">
                 <p>CONVITE BRANCO CASAMENTO R$2,00 UND</p>
                 <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
         <div class="bloco">
-                <img  class="brigadeiro" src="img/festa.jpeg" alt="">
+                <img  class="brigadeiro" src="festa.jpeg" alt="">
                 <p>CONVITE ARRAÍA R$1,50 UND</p>
                 <button class="bt2"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -54,19 +54,19 @@
 
    <section class="linha">
     <div class="bloco">
-        <img class="brownierecheado" src="img/interativo.jpg" alt="">
+        <img class="brownierecheado" src="interativo.jpg" alt="">
         <p>CONVITE DIGITAL INTERATIVO R$15,00 </p>
         <button class="bt4"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="copinhos" src="img/verde.webp" alt="">
+        <img  class="copinhos" src="verde.webp" alt="">
         <p>CONITE VERDE HORIZONTAL R$3,50 UND</p>
         <button class="bt5"  onclick="compre()" >COMPRAR</button>
         </div>
 
         <div class="bloco">
-        <img  class="donults" src="img/piscina.jpeg" alt="">
+        <img  class="donults" src="piscina.jpeg" alt="">
         <p>CONVITE FESTA NA PISCINA R$2,00 UND</p>
         <button class="bt6"  onclick="compre()" >COMPRAR</button>
         </div>
@@ -74,19 +74,19 @@
 
         <section class="linha">
         <div class="bloco">
-            <img class="brownierecheado" src="img/marsala.webp" alt="">
+            <img class="brownierecheado" src="marsala.webp" alt="">
             <p>CONVITE MARSALA R$3,00 UND</p>
             <button class="bt7"  onclick="compre()" >COMPRAR</button>
             </div>
     
             <div class="bloco">
-            <img  class="copinhos" src="img/floral.jpeg" alt="">
+            <img  class="copinhos" src="floral.jpeg" alt="">
             <p>CONVITE FLORAL R$2,99 UND</p>
             <button class="bt8"  onclick="compre()" >COMPRAR</button>
             </div>
     
             <div class="bloco">
-            <img  class="donults" src="img/marmorizado.jpg" alt="">
+            <img  class="donults" src="marmorizado.jpg" alt="">
             <p>CONVITE MARMORIZADO R$4,00 UND</p>
             <button class="bt9"  onclick="compre()" >COMPRAR</button>
             </div>
